--- a/2019/강한나(BE)/0828_서버_겉핥기.md
+++ b/2019/강한나(BE)/0828_서버_겉핥기.md
@@ -1,23 +1,56 @@
-# 주제를 작성하세요
-배운 것을 작성하세요.
+# 서버 겉핥기
+
+### 1. HTTP란
+- 사용자와 서버가 데이터를 주고받을 때 사용하는 약속
+
+### 2. 인터넷과 웹사이트의 차이점
+- 웹사이트는 서버에 저장된 html을 보여주는 것
+- 인터넷은 통신망
+
+### 3. urI와 url
+- urI : 의미를 가리킴
+- url : 위치를 가리킴
+
+### 4. HTTP status code
+- 현재 상태를 숫자로 간단하게 알려줌
+- 100~500번대까지 있음
+
+### 5. REST
+- http가 사용하기 어려워 만들어진 개념
+- urI, HTTP method로 표현
+
+### 6. HTTP method
+- 서버에 요청을 보내는 방법
+- GET, POST, DELETE 등
+
+### 7. 서버가 동작하는 방법
+- 사용자가 request -> port를 지나서 서버로 감 -> 서버 연산 후 사용자에게 response
+
+### 8. API 서버
+- 사용자에게 맞는 기능을 하는 서버
+
+### 9. 서버의 특성
+1. 무상태성(stateless) : 현재 상태를 유지하지 않음 
+2. 무연결성(connectless) : request-response가 끝난 후 연결을 끊음
+
+    -> 세션, 쿠키 등을 사용
 
 ## 궁금한 점
-궁금한 점을 한 개 이상 작성하세요.
-스스로 해결했다면 해결 방법과 참고한 문서 링크를 함께 첨부하고,
-멘토에게 질문했다면 멘토의 답변을 자신이 이해한 대로 작성하세요.
+인터넷과 웹사이트의 차이점에 관해 이해를 잘 못해서 궁금했다.
+해결방법 : 구글에 검색했다.
 
 ## 회고 
-이번 멘토링을 간단히 회고하세요.
+복습을 하자!! 제발 복습을 하자!! 그리고 자신감 있게 말하자.
 
 # 멘토 코멘트 
 ## 칭찬할 점
-이번 멘토링에서 칭찬할 점을 적어 주세요.
+무엇이라도 말하려 하는 모습을 칭찬함.
 
 ## 노력할 점 
-이번 멘토링에서 부족한 점, 더 노력해야 할 점을 적어 주세요.
+항상 장난칠때는 목소리가 큰데 질문을하면 개미랑 대화하는 줄 알았다.
 
 ## 다음 계획 
-다음 멘토링 계획을 적어 주세요.
+한나가 하고있는 db연결을 봐주고 데이터베이스에 대해 이야기해볼 것이다.
 
 ## 그 외
-다른 코멘트가 있다면 더 달아 주세요.
+까먹는것은 죄가 아니다. 하지만 자신감이 없는 모습은 용서할 수없따!!!!!
