--- a/2019/강한나(BE)/0828_서버_겉핥기.md
+++ b/2019/강한나(BE)/0828_서버_겉핥기.md
@@ -4,8 +4,9 @@
 - 사용자와 서버가 데이터를 주고받을 때 사용하는 약속
 
 ### 2. 인터넷과 웹사이트의 차이점
-- 웹사이트는 서버에 저장된 html을 보여주는 것
-- 인터넷은 통신망
+- 웹사이트 : 인터넷에서 사용자들이 정보가 필요할 때 제공할 수 있도록 웹서버에 정보를 저장해 놓은 집합체. 웹 페이지의 모음
+
+- 인터넷 : 전 세계 컴퓨터들을 하나로 연결하는 거대한 컴퓨터 통신망
 
 ### 3. urI와 url
 - urI : 의미를 가리킴
@@ -36,8 +37,8 @@
     -> 세션, 쿠키 등을 사용
 
 ## 궁금한 점
-인터넷과 웹사이트의 차이점에 관해 이해를 잘 못해서 궁금했다.
-해결방법 : 구글에 검색했다.
+인터넷과 웹사이트의 개념과 차이에 대해 잘 몰라서 검색해봤다.
+(http://m.blog.daum.net/duinar-346/17?np_nil_b=-1 참고)
 
 ## 회고 
 복습을 하자!! 제발 복습을 하자!! 그리고 자신감 있게 말하자.
