0910_타입과 문법

--- a/2019/이성진(FE)/0904_타입과 문법.md
+++ b/2019/이성진(FE)/0904_타입과 문법.md
@@ -1,5 +1,42 @@
 # 주제를 작성하세요
-배운 것을 작성하세요.
+
+### DATA TYPE
+- 원시 데이터 형
+    - Boolean
+    - null
+    - undefined
+    - Number
+    - String
+    - Symbol
+- Object
+
+# boolean
+---
+- true와 false로 이루어진다.
+- ture는 참, false는 거짓으로 사용된다.
+
+# undefined
+---
+- 변수를 선언할 때 변수에 값이 없으면 자동으로 들어가는 값이다.
+- C와는 다르게 쓰레기 값이 아니라 undefined라는 값을 줘서 더 좋다.
+
+# null
+---
+- 변수가 있는데 값이 없다는 것이 아니라 완전하게 변수 자체가 없음을 의미한다.
+
+# Number
+---
+- 정수 + 실수로서 부동 소수점을 이용한다.
+- C에서 3/2 => 1, javascript에서는 3/2 => 1.5이다.
+
+# String
+---
+- 문자열을 의미한다.
+
+# Symbol
+---
+- 고유한 값으로 같아도 같지않다.
+
 
 ## 궁금한 점
 궁금한 점을 한 개 이상 작성하세요.
