승빈이 멘토링

--- a/2019/양승빈(BE)/0828_서버_기본.md
+++ b/2019/양승빈(BE)/0828_서버_기본.md
@@ -47,3 +47,16 @@ url은 위치를 갖고 있는 주소
 
 ## 회고
 서버에 대해서 몰랐던 게 너무 많았다. 이 내용들을 꼭 기억해야겠다.
+
+# 멘토 코멘트 
+## 칭찬할 점
+열심히 들으려고 노력하는 점이 좋았다.
+
+## 노력할 점 
+대답을 할 때에 목소리가 작다. 
+
+## 다음 계획 
+게시판을 만들고 네트워크 책을 읽고 오게 할 것이다.
+
+## 그 외
+승빈이 화이팅!
