--- a/2019/이성진(FE)/0918_this.md
+++ b/2019/이성진(FE)/0918_this.md
@@ -4,13 +4,13 @@
 - this는 함수를 호출하는 **방식**에 의해 결정됩니다.
 ``` javascript
 const func = {
-    f: function() {
+    f: function() { 
         console.log(this === window);
     }
 }
 func.f(); //false
 // f()함수를 호출하는 것은 func 객체입니다. 
-// 따라서 this는 func에 바인딩 됩니다..? -- ㉠
+// 따라서 this는 func에 바인딩 됩니다..?㉠
 ```
 
 ### 생성자 함수의 this
