--- a/2019/양승빈(BE)/0910_JS_제어문.md
+++ b/2019/양승빈(BE)/0910_JS_제어문.md
@@ -79,3 +79,13 @@ excutor : resolve및 reject 인수를 전달할 실행 함수
 1. then()의 두 번째 인자로 처리하는 방법
 
 2. catch()를 사용하는 방법
+
+## 궁금한 점
+
+프로미스 에러 처리 방법에서 catch()를 사용하는 법은 알겠는데, then()의 두 번째 인자로 처리하는 방법에 대해서 잘 모르겠다.
+
+-> 에러를 잡는 함수를 새로 만들면 됨
+
+## 회고
+
+다른 제어문은 C에서 사용했던 것과 형식이 비슷해서 잘 알겠는데, 프로미스가 조금 어렵다. 프로미스는 좀 더 공부해야겠다
