--- a/2019/양승빈(BE)/0916_JS_반복문.md
+++ b/2019/양승빈(BE)/0916_JS_반복문.md
@@ -96,3 +96,11 @@
         }
     
     for...in은 속성 이름을 통해 반복, for...of는 속성 값을 통해 반복
+    
+## 궁금한 점
+
+백엔드 공부를 할 때 코드를 보면 반복문을 사용하는 경우를 못 봤는데, 사용하는 경우가 있나요? 있다면 어떤 경우에 사용하나요?
+
+## 회고
+
+제어문과 마찬가지로 C와 비슷해서 비교적 쉽게 공부할 수 있었다. for in과 for of에 대해서는 기억해놔야겠다.
