--- a/2019/김세준(FE)/Javascript/1113_JS_프로미스.md
+++ b/2019/김세준(FE)/Javascript/1113_JS_프로미스.md
@@ -37,5 +37,63 @@ Promise는 callback 패턴의 단점을 보완하고 비동기 처리 시점을 
 
 #### 	3 - 2. 에러 처리의 한계
 
+```javascript
+try {
+    setTimeout(() => {
+        throw "error";
+    }, 1000);
+} catch(error){
+    console(error); // 호출되지 않음
+}
+```
+
+위의 코드에서 try 블록 내의 setTimeout 함수가 실행되면 1초 후에 callback 함수가 실행되고 이 콜백 함수는 예외를 발생시킨다. 하지만 catch 블록에서 callback 함수에서의 예외를 잡지 못한다.
+
+비동기 처리 함수의 callback 함수는 tick( 1초뒤 ) 이벤트가 발생하면 Task Queue로 이동한 후 호출스택이 비워졌을 때, 호출 스택으로 이동되고 처리된다. 하지만 setTimeout 함수는 비동기 처리 함수이므로 콜백 함수가 실행될 때까지 기다리지 않고 즉시 종료되어 호출 스택에서 제거된다. throw된 error는 호출자를 따라 가는데 이러면 callback 함수의 호출자가 setTimeout 함수가 아니게 되어 에러를 catch 할 수 없게된다.
+
+setTimeout 함수의 콜백 함수를 호출한 것은 setTimeout 함수가 아니다. 따라서 setTimeout 함수의 콜백 함수 내에서 발생시킨 에러는 catch 블록에서 캐치되지 않아 프로세스는 종료된다. 
+
+이러한 이유 때문에 Promise를 구현하게 되었다.
+
+
+
+### 4. Promise 생성
+
+```javascript
+const promise = new Promise((resolve, reject) => {
+    if(/* 비동기 작업 성공 */) {
+    	resolve('result');   
+    } else {
+    	reject('failure reason');                        
+    }
+});
+```
+
+ Promise 생성자 함수는 비동기 작업을 수행할 콜백 함수를 인자로 전달받는데 이 콜백 함수는 resolve와 reject 함수를 인자로 전달받는다. 
+
+#### 4 - 1. 상태
+
+- pending - 대기 
+- fulfilled - 성공
+- rejected - 실패
+
+```javascript
+function getData() {
+    return new Promise((resolve, reject) => {
+        const data = 100;
+        resolve(data);
+    });
+}
+
+getData().then((resolvedData) => { // resolve() 의 결과 값 data를 매개변수로 전달 받는다.
+    	console.log(resolvedData); // 100
+	}
+);
+```
+
+
+
+
+
 ​     
 
