--- a/2019/김세준(FE)/node.js/1111_OSI 7계층.md
+++ b/2019/김세준(FE)/node.js/1111_OSI 7계층.md
@@ -12,7 +12,7 @@ Open System Interconnection 7 layer 를 뜻한다.
 
 
 
-### 1. 7계층 응용계층
+### 7계층 - 응용계층
 
 Application 
 
@@ -20,13 +20,57 @@ Application
 
 웹 브라우저나 응용 프로그램등이 이 계층에 해당한다.
 
-HTTP와 같은 프로토콜에 의해 통신 패킷들이 처리된다.
+이 곳에서 HTTP와 같은 프로토콜에 의해 통신 패킷들이 처리된다.
 
 
 
-### 6계층 표현 계층
+### 6계층 - 표현 계층
 
 Presentation
+
+대표적인 예로는 데이터를 안전하게 전송하기 위해 암호화, 복호화하는 것인데, 이 작업이 바로 6계층에서 처리된다.
+
+
+
+### 5계층 - 세션 계층
+
+Session 
+
+컴퓨터나 서버 간에 "대화"가 필요하면 Session을 만들어 처리한다.
+
+
+
+### 4계층 - 전송 계층
+
+Transport
+
+전송 제어 프로토콜(TCP)가 이 계층에 해당한다. TCP는 IP위에 구축되고 기기의 IP주소가 여기서 작동된다.
+
+
+
+### 3계층 - 네트워크 계층
+
+Network
+
+여러 라우트를 통한 라우팅을 비롯한 패킷 전달을 담당한다.
+
+
+
+### 2계층 - 데이터 링크 계층
+
+Data Link 
+
+ 노드 간 데이터 전송을 제공하며 물리 계층의 오류 수정도 처리한다
+
+
+
+### 1계층 - 물리 계층
+
+Physical
+
+ 네트워킹 문제가 발생하면 많은 네트워크 전문가가 물리 계층으로 바로 가서 모든 케이블이 제대로 연결돼 있는지, 라우터나 스위치 또는 컴퓨터에서 전원 플러그가 빠지지 않았는지 확인한다
+
+
 
 
 
